# goat-event-v2

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  LICENSE_HEADER.txt  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
data/: event_requests.py  frc_json.py  season_requests.py
real/: alliance.py  event.py  match.py  season.py  team.py
ruleset/cmpqual/: protocol.py
ruleset/tournament/: protocol.py
test/: test_data.py  test_real.py
test/test_cache/2024/: 2024-AZVA.json  SeasonData.json
utils/: data_util.py
